--- a/System/indivi.html
+++ b/System/indivi.html
@@ -2,13 +2,14 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
+<title>Mash-up Search</title>
 <meta name="viewport" content="initial-scale=1.0, user-scalable=yes" />
 <style type="text/css">
   html { height: 100%; width: 100%}
   body { height: 100%; widht: 100%; margin: 0; padding: 0 }
   #map_canvas { height: 100%; width: 70%; margin: 0; padding: 0 }
-  #Googlenews { height: 30%; width: 30%; margin: 0; padding: 0 }
+  #Googlenews { height: 40%; width: 40%; margin: 0; padding: 0 }
+  #my_videos { height: 40%; width: 40%; margin: 0; padding: 0 }
   #GoogleSear { height: 30%; width: 30%; margin: 0; padding: 0 }
   #results { height: 70%; width: 100%; margin: 0; padding: 0 }
   #query { height: 30%; width: 100%}
@@ -20,7 +21,35 @@
 			alert("HI");
 	}
 </script>-->
+<script src="../YoutubeFiles/video_browser.js" type="text/javascript"></script>
+<script src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
+<script src="../jquery.phono.js"></script>
+    <script>
+    $(document).ready(function(){
+      var phono = $.phono({
+        apiKey: "e801a843171995275c37ab13a2847bf4",
+        onReady: function() {
+          $("#call").attr("disabled", false).val("Call " + input_f.value + "'s helpline");
+        }
+      });
 
+      $("#call").click(function() {
+        $("#call").attr("disabled", true).val("Busy");
+        phono.phone.dial("919-675-1528", {
+          onRing: function() {
+            $("#status").html("Ringing");
+          },
+          onAnswer: function() {
+            //$("#status").html("Answered");
+          },
+          onHangup: function() {
+            $("#call").attr("disabled", false).val("Call");
+            $("#status").html("Hangup");
+          }
+        });
+      });
+    })
+    </script>
 <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=true" >
 </script>
 <script type="text/javascript">
@@ -134,16 +163,17 @@ function loadall()
 	initialize();
 	loadme();
 	loadme1();
-	
+	ytvbp.presentVideos(input_f.value);
+	call.style.display = '';
+	call.value = "Call " + input_f.value + "'s helpline";
 }
+
 
 </script>
 </head>
 
 
 <body bgcolor="#FFFFFF" align="center">
-
-<!--<table bgcolor="#CCFF66" height="100%" width="100%">-->
 <table bgcolor="#FFFFFF" id="query">
   <tr align="center">
     <td><input id="input_f" type="text" size="40"/></td>
@@ -158,7 +188,11 @@ function loadall()
     <td><input  type="checkbox"/> Electrical and Computer Engineering</td>
   </tr>
 </table>
-<table id="results">
+<div id="helpline">
+    <input id="call" type="button" disabled="true" value="Loading..." style="display:none"/>
+    <span id="status"></span>
+</div>
+<table id="results" align="center">
   <tr>
     <td align="right"><div  id="GoogleSear"> </div></td>
 	<td width="40"/>
@@ -166,9 +200,9 @@ function loadall()
   </tr>
   <tr height="100"/>
   <tr>
-    <td><div  id="saved_results"></td>
+    <td align="right"><div  id="my_videos"/></td>
 	<td width="40"/>
-    <td><div  id="Googlenews"> </div></td>
+    <td align="left"><div  id="Googlenews"> </div></td>
   </tr>
 </table>
 
