Commiting UI changes from Ankita

--- a/System/subscribe.html
+++ b/System/subscribe.html
@@ -2,11 +2,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link href="style3.css" rel="stylesheet" type="text/css" media="screen" />
 <title>Subscribe</title>
 
 </head>
 
-<body>
+<body bgcolor="#999999">
+<div id="subs">
 <form name="subscribe" action="subscribe_user.php" method="post" enctype="multipart/form-data">
 <table>
 <tr>
@@ -49,5 +51,6 @@ Option:
 </tr>
 </table>
 </form>
+</div>
 </body>
 </html>
