--- a/System/university.html
+++ b/System/university.html
@@ -1,26 +1,11 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Mash-up Search</title>
-<meta name="viewport" content="initial-scale=1.0, user-scalable=yes" />
-<style type="text/css">
-  html { height: 100%; width: 100%}
-  body { height: 100%; widht: 100%; margin: 0; padding: 0 }
-  #map_canvas { height: 100%; width: 70%; margin: 0; padding: 0 }
-  #Googlenews { height: 40%; width: 40%; margin: 0; padding: 0 }
-  #my_videos { height: 40%; width: 40%; margin: 0; padding: 0 }
-  #GoogleSear { height: 30%; width: 30%; margin: 0; padding: 0 }
-  #results { height: 70%; width: 100%; margin: 0; padding: 0 }
-  #query { height: 30%; width: 100%}
-  
-</style>
-<!--
-<script type="text/javascript">
-	function loadall(){
-			alert("HI");
-	}
-</script>-->
+<title>Untitled Document</title>
+<meta name="keywords" content="" />
+<meta name="description" content="" />
+<link href="style2.css" rel="stylesheet" type="text/css" media="screen" />
 <script src="../YoutubeFiles/video_browser.js" type="text/javascript"></script>
 <script src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
 <script src="../jquery.phono.js"></script>
@@ -170,37 +155,82 @@ function loadall()
 
 
 </script>
+<script language="javascript" type="text/javascript">
+<!--
+function popitup(url) {
+	newwindow=window.open(url,'name','height=300,width=400 ');
+	if (window.focus) {newwindow.focus()}
+	return false;
+}
+
+// -->
+</script>
+ 
+
 </head>
-<body bgcolor="#FFFFFF" align="center" style=" border:thick" style="border:#00FF33">
-<table height="30%" width="100%">
+
+<body>
+<div id="main_body">
+<div id="head">
+<div id="logo"> 
+</div>
+<div id="title">
+</div>
+</div>
+<div id="main_page">
+<div id="header-body">
+<div id="header">
+
+  <!--mainpage-->
+<div id="menu">
+			
+			  <ul>
+			    <li class="current_page_item"><a href="designed.html" class="first">Home</a></li>
+			    <li><a href="#">University Search</a></li>
+			    <li><a href="#">Chat</a></li>
+			    <li></li>
+			    <li><a href="subscribe.html" onclick="return popitup('subscribe.html')">Subscribe</a></li>
+		      </ul>
+	   
+</div>
+
+<div id="Search">
+  <form method="getsearch">
+    
+      <fieldset>
+        <input type="text" id="input_f" name="s" id="search-box" size="40"/>
+        <button type="button" onclick="loadall()">Search</button>
+      </fieldset>
+   
+  </form>
+</div>
+</div>		
+</div>
+
+</div>
+<div id="data">
+<div id="check-box" >
+<table align="center">
 <tr>
-<td  background="convocation.jpg" height="100%" width="37%" >
-</td>
-<td>
-</td>
-</tr>
-</table>
-<table bgcolor="#FFFFFF" id="query">
-  <tr align="center">
-    <td><input id="input_f" type="text" size="40"/></td>
-	<td><button type="button" onclick="loadall()">Search</button></td>
-  </tr>
-  <tr>
-    <td><input  type="checkbox"/> Top 10 Universities</td>
+    <td><input  type="checkbox"/>  Top 10 Universities</td>
+    <td width="100"></td>
     <td><input  type="checkbox"/> Top 40 Universities</td>
+  </tr>
+  <tr height="20">
   </tr>
   <tr>
     <td><input  type="checkbox"/> Computer Science</td>
+        <td width="100"></td>
     <td><input  type="checkbox"/> Electrical and Computer Engineering</td>
   </tr>
 </table>
-<div id="helpline">
-    <input id="call" type="button" disabled="true" value="Loading..." style="display:none"/>
-    <span id="status"></span>
 </div>
+<div id="padding">
+</div>
+<div id="api">
 <table id="results" align="center">
   <tr>
-    <td align="right"><div  id="GoogleSear"> </div></td>
+    <td align="right"><div  id="GoogleSear" > </div></td>
 	<td width="40"/>
     <td align="left"><div  id="map_canvas"/></td>
   </tr>
@@ -213,5 +243,14 @@ function loadall()
 </table>
 
 
+
+</div>
+</div>
+<div id="page_bottom">
+  <div align="center">
+    <!--bottom page-->
+  </div>
+</div>
+</div>
 </body>
 </html>
