Changes in University Page UI

--- a/System/university.html
+++ b/System/university.html
@@ -210,6 +210,9 @@ function popitup(url) {
 </div>
 <div id="data">
 <div id="check-box" >
+<table>
+<tr>
+<td>
 <table align="center">
 <tr>
     <td><input  type="checkbox"/>  Top 10 Universities</td>
@@ -224,11 +227,22 @@ function popitup(url) {
     <td><input  type="checkbox"/> Electrical and Computer Engineering</td>
   </tr>
 </table>
+</td>
+<td>
+<div id="helpline">
+    <input id="call" type="button" disabled="true" value="Loading..." style="display:none"/>
+    <span id="status"></span>
 </div>
-<div id="padding">
+</td>
+</tr>
+</table>
 </div>
+
 <div id="api">
 <table id="results" align="center">
+<tr height="20">
+
+</tr>
   <tr>
     <td align="right"><div  id="GoogleSear" > </div></td>
 	<td width="40"/>
