--- a/System/subscribe.html
+++ b/System/subscribe.html
@@ -7,7 +7,35 @@
 
 </head>
 
-<body bgcolor="#999999">
+<body bgcolor="#999999" onload = "populateName()">
+
+<script type='text/javascript'>
+	function populateName(){
+			var ret = getURLParam("univ_name");
+			//alert("Param is: " + ret);
+			university.value = "";
+			university.value = ret;
+	}
+	function getURLParam(strParamName){
+	
+	//alert(strParamName);
+  var strReturn = "";
+  var strHref = window.location.href;
+  if ( strHref.indexOf("?") > -1 ){
+    var strQueryString = strHref.substr(strHref.indexOf("?")).toLowerCase();
+    var aQueryString = strQueryString.split("&");
+    for ( var iParam = 0; iParam < aQueryString.length; iParam++ ){
+      if ( aQueryString[iParam].indexOf(strParamName.toLowerCase() + "=") > -1 ){
+        var aParam = aQueryString[iParam].split("=");
+        strReturn = aParam[1];
+		//alert(strReturn);
+        break;
+      }
+    }
+  }
+  return unescape(strReturn);
+}
+</script>
 <div id="subs">
 <form name="subscribe" action="subscribe_user.php" method="post" enctype="multipart/form-data">
 <table>
@@ -20,7 +48,7 @@ Username: <input type="text" name="user"/>
 </tr>
 <tr>
 <td>
-University Name: <input type="text" name="university"/>
+University Name: <input type="text" name="university" id="university"/>
 </td>
 </tr>
 <tr height="20">
